@@ -38,7 +38,7 @@ pqxx::tablewriter::tablewriter(transaction_base &T,
 pqxx::tablewriter::~tablewriter() throw ()
 {
 #ifdef PQXX_QUIET_DESTRUCTORS
-  internal::disable_noticer Quiet(m_Trans.conn());
+  disable_noticer Quiet(m_Trans.conn());
 #endif
   try
   {
